# openshell-deepagent

./: .env.example  .gitignore  README.md  langgraph.json  policy.yaml  pyproject.toml  requirements.txt  test_invoice.py
skills/truck_schedule/: context.md
src/: AGENTS.md  agent.py  api.py  backend.py  intent_classifier.py  prompts.py  run_graph.py
src/graph/: graph.py
src/llm/: semantic_router.py
src/prompts/: system_prompt.md
src/tools/: governance_tool.py  test_ocr.py
src/tools/dispatch/: dispatch_tools.py  truck_utilization_tool.py
src/tools/finance/: invoice_parser.py  reconcilation.py
src/tools/planning/: planning_runner.py  planning_tools.py  truck_scheduling_tool.py
src/tools/utilization/: adherence_tool.py  utilization_tools.py
